2004-07-19  Assaph Mehr     <assaph@avaya.com>
	* lib/rubygems/command.rb, packages/sources/lib/sources.rb: Added
	command-line-configurable sources.

2004-07-18  Chad Fowler	    <chad@chadfowler.com>
	* lib/rubygems/validator.rb: Fixed a bug that would cause "managed"
	files to appear to be unmanaged due to differences in how the paths
	were formatted.

2004-07-17  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/gem_commands.rb (InstallCommand#execute): removed clear
	  bug (name -> gem.name).

2004-07-14  Rich Kilmer     <rich@infoether.com>
	* added old_format.rb which is used in the (hack) in format.rb 
	  to detect the older version of a gem, and if present, switches 
	  to that class instead.
	* fixed the ARGV passing in bin/gem to ingore args past -- which
	  are used for passing params to source gems (extconf.rb)

2004-07-13  Chad Fowler	    <chad@chadfowler.com>
	* lib/rubygems/installer.rb, lib/rubygems/package.rb, 
	lib/rubygems/format.rb, test/test_package.rb: Added Mauricio 
	Fernandez's patch to replace old gem format with tar.gz format.
	Fixed some failing unit tests that resulted.  Still a couple left.
	* lib/rubygems.rb: Fixed a bug introduced by the previous patch.

2004-07-13  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems.rb: (#require_gem) added the ability to do
	  "require_gem 'rake/packagetask'", for instance, which is a
	  shortcut for "require_gem 'rake'; require 'rake/packagetask'".

2004-07-13  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/gem_commands.rb: refactored --version option
	  in all cases to the new VersionOption module.

2004-07-13  Gavin Sinclair  <gsinclair@soyabean.com.au>

	* lib/rubygems/cmd_manager.rb: added 'unpack' command.

	* lib/rubygems/gem_commands.rb (UnpackCommand): added.

	* lib/rubygems/installer.rb (Installer#unpack): added.

2004-07-09  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/user_interaction.rb (Gem::StreamUI::ask and